# nx100-remote-control

./: .gitignore  HttpSocket.py  LICENSE  README.md  Telnet.py  Testing.py  WebServer.py  XboxController.py  setup.cfg  setup.py
.github/workflows/: python-app.yml
arduino/: GripperSketch.fzz
arduino/Gripper/: Gripper.ino
module/: Commands.py  Gripper.py  MockResponse.py  Socket.py  Utils.py  WebServer.py  index.html  xbox360_controller.py
nx100_remote_control/module/: Commands.py  Gripper.py  LinearMove.py  MockResponse.py  Socket.py  Utils.py  WebServer.py
nx100_remote_control/objects/: Command.py  JobDetail.py  Status.py
nx100_remote_control/tests/: test_commands.py  test_gripper.py
objects/: Alarm.py  Command.py  CurrentPos.py  Gripper.py  IO.py  MoveL.py  Status.py  Time.py
raspberrypi/: README.md  indes.js  index.js  package.json
src/nx100_remote_control/: __init__.py
src/nx100_remote_control/module/: Commands.py  JointMove.py  LinearMove.py  MockResponse.py  Socket.py  Utils.py  WebServer.py  index.html
src/nx100_remote_control/objects/: Gripper.py  MoveJ.py  MoveL.py  Response.py
src/nx100_remote_control/tests/: test_commands.py
