[metadata]
name = nx100-remote-control
version = 1.0.2
author = norkator
author_email = nitramite@outlook.com
description = Motoman NX100 remote control ability research library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/norkator/nx100-remote-control
project_urls =
    Issues = https://github.com/norkator/nx100-remote-control/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src